# open-prime-rando-practice-mod

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  build-elf.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: python.yml
src/open_prime_rando_practice_mod/: __init__.py
src/open_prime_rando_practice_mod/__pyinstaller/: hook-open_prime_rando_practice_mod.py
tests/: test_elf_exists.py
